Versão inicial do API de Hoteleria
